--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,47 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "RSS Reader - Feeds";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container-fluid">
+    <h1 class="text-center display-3">
+        @ViewData["Title"]
+    </h1>
+
+    <div class="row mt-3">
+        <!-- #region Feed List -->
+        <aside class="col-md-3 bg-body-secondary p-3 border-end rounded">
+            <div class="nav flex-column nav-pills gap-2">
+                <h4 class="text-center">Feeds</h4>
+                @foreach (var feed in Model.Feeds)
+                {
+                    <button class="nav-link text-start" data-url="/feed/@feed.Id">@feed.Title</button>
+                }
+            </div>
+        </aside>
+        <!-- #endregion Feed List -->
+
+        <!-- #region Feed Content -->
+        <div class="col-md-9">
+                <div id="feed-container" class="position-relative h-100">
+                    <div id="main-spinner" class="spinner-overlay d-none rounded-4">
+                        <div class="spinner-border" role="status">
+                            <span class="visually-hidden">Loading...</span>
+                        </div>
+                    </div>
+                </div>
+
+                <main class="p-4 h-100">
+                    <div id="feed-content" class="h-100">
+                        <div class="h-100 d-flex justify-content-center align-items-center">
+                            <p>Select a feed...</p>
+                        </div>
+                    </div>
+                </main>
+        </div>
+        <!-- #endregion Feed Content -->
 </div>
+
+
+@section Scripts {
+    <script src="~/js/site.js" asp-append-version="true"></script>
+}
