--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,15 +6,14 @@
     <title>@ViewData["Title"] - RSS_Reader</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/RSS_Reader.styles.css" asp-append-version="true" />
 </head>
 <body data-bs-theme="dark">
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">RSS_Reader</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
@@ -33,9 +32,20 @@
         </main>
     </div>
 
+    <div class="d-flex sticky-bottom">
+        <button type="button" class="btn btn-secondary btn-lg btn-back-to-top rounded-4 shadow-sm p-2 mb-2
+            ms-auto" style="width: 150px; display: none; margin-right: 10px" id="btn-back-to-top">Back To Top</button>
+    </div>
+
     <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2025 - RSS_Reader - <a href="https://github.com/Alexzander-Hurd/RSS-Reader/" target="_blank"><img href="https://img.shields.io/github/stars/Alexzander-Hurd/RSS-Reader.svg?style=for-the-badge" alt="GitHub" /> GitHub Repo</a>
+        <div class="container d-flex justify-content-center align-items-center">
+            <p class="m-0 pe-2">&copy; 2025 - RSS_Reader</p> - <a href="https://github.com/Alexzander-Hurd/RSS-Reader/" target="_blank">
+                <div class="d-flex align-content-center justify-content-center text-center">
+                    <img src="https://img.shields.io/github/stars/Alexzander-Hurd/RSS-Reader.svg?style=for-the-badge"
+                        alt="GitHub" style="max-width: 100px; height: auto;" class="ps-2" />
+                    <p class="m-0 ps-1">GitHub Repo</p>
+                </div>
+            </a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
