--- a/Views/Home/Feed.cshtml
+++ b/Views/Home/Feed.cshtml
@@ -11,11 +11,20 @@
         @foreach (var item in Model.Entries ?? new List<Entry>())
         {
             <div class="card mt-2" style="width: 100%;">
-                <div class="card-body d-flex justify-content-between">
-                    <h5 class="card-title">@item.Title</h5>
-                    <p class="card-text">@item.Description</p>
-                    <p class="card-text"><small class="text-muted">Last updated @item.PubDate</small></p>
-                    <button data-url="@Url.Action("article", "home", new { id = item.Id })" class="btn btn-primary article-link">Read More</button>
+                <div class="card-body d-lg-inline-flex justify-content-between">
+                    <div class="col-lg-10">
+                        <div class="row" style="width: 100%;">
+                            <h5 class="card-title">@item.Title</h5>
+                            <p class="card-text"><small class="text-muted">Last updated @item.PubDate</small></p>
+                        </div>
+                        <div class="row">
+                            <p class="card-text">@item.Description</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-2">
+                        <button data-url="@Url.Action("article", "home", new { id = item.Id })"
+                            class="btn btn-primary article-link h-100 w-100">Read More</button>
+                    </div>
                 </div>
             </div>
         }
