--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -108,6 +108,8 @@
                     $("#addFeedModal").modal("hide");
 
                     showToast("Success", "Feed added successfully.", true);
+
+                    bindFeeds();
                 })
                 .catch(error => {
                     console.error(error);
