--- a/Views/Home/Feed.cshtml
+++ b/Views/Home/Feed.cshtml
@@ -4,7 +4,23 @@
     ViewBag.Title = "Feed";
 }
 
-<h2 class="text-center">@Model.Title</h2>
+<div class="d-md-flex flex-col align-items-center justify-content-around">
+    <div class="d-flex flex-column col-md-10 align-items-center justify-content-center">
+        <div class="row" style="width: 100%;">
+            <h2 class="text-center">@Model.Title</h2>
+        </div>
+        <div class="row" style="width: 100%;">
+            <p class="text-center">@Model.Description</p>
+        </div>
+    </div>
+    <div class="d-flex col-md-2 align-items-center justify-content-center">
+        <button class="btn btn-danger delete align-self-center justify-self-center" 
+            data-url="/deletefeed/@Model.Id"
+            data-bs-toggle="modal" data-bs-target="#deleteModal">
+            Delete Feed
+        </button>
+    </div>
+</div>
 
 <div class="h-100 d-flex flex-column">
     <div class="flex-grow-1 overflow-auto">
@@ -25,12 +41,15 @@
 
                         @if (item.FullContent == null || item.FullContent.Length < 500)
                         {
-                            <a href="@item.Link" class="btn btn-primary h-100 w-100 d-flex justify-content-center align-items-center">Read More<br>(External)</a>
+                            <a href="@item.Link"
+                                class="btn btn-primary h-100 w-100 d-flex justify-content-center align-items-center">Read
+                                More<br>(External)</a>
                         }
                         else
                         {
                             <button data-url="/article/@item.Id"
-                            class="btn btn-success article-link h-100 w-100 d-flex justify-content-center align-items-center">Read More</button>
+                                class="btn btn-success article-link h-100 w-100 d-flex justify-content-center align-items-center">Read
+                                More</button>
                         }
                     </div>
                 </div>
