--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -75,6 +75,30 @@
     </div>
 </div>
 
+<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalCenterTitle"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="deleteModalLongTitle">Confirm Deletion</h5>
+                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Are you sure you want to remove <strong id="deleteName">this</strong> Feed?</p>
+                <p class="text-warning">(Warning! All associated posts will also be deleted)</p>
+            </div>
+            <div class="modal-footer">
+                <form class="form" id="deleteForm" class="form" method="post">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="submit" data-bs-dismiss="modal" class="btn btn-warning">Remove</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+
 @section Scripts {
 
     <script>
