--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -79,11 +79,9 @@
     aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
-            <div class="modal-header">
+            <div class="modal-header justify-content-between">
                 <h5 class="modal-title" id="deleteModalLongTitle">Confirm Deletion</h5>
-                <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+                <button type="button" class="close btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
                 <p>Are you sure you want to remove <strong id="deleteName">this</strong> Feed?</p>
@@ -92,7 +90,7 @@
             <div class="modal-footer">
                 <form class="form" id="deleteForm" class="form" method="post">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="submit" data-bs-dismiss="modal" class="btn btn-warning">Remove</button>
+                    <button type="submit" data-bs-dismiss="modal" class="btn btn-danger">Remove</button>
                 </form>
             </div>
         </div>
