fixed bug where article and browser back buttons didn't work on newly added feeds.

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -131,7 +131,7 @@
 
                     showToast("Success", "Feed added successfully.", true);
 
-                    bindFeeds();
+                    tabButtons = bindFeeds();
                 })
                 .catch(error => {
                     console.error(error);
