reset add feed form after successful add

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -145,6 +145,8 @@
 
                     showToast("Success", "Feed added successfully.", true);
 
+                    form.reset();
+
                     tabButtons = bindFeeds();
                 })
                 .catch(error => {
